Fix path generation on backend initialization